...

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
...

        <ScrollView
            android:id="@+id/add_edit_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/name_label"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
...

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/name_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/start_date_icon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_calendar"
                    app:layout_constraintBottom_toBottomOf="@+id/start_date_label"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/name_label" />
...

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/start_date_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/start_time_icon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_clock"
                    app:layout_constraintBottom_toBottomOf="@+id/start_time_label"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/start_date_label" />
...

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/start_time_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/notes_icon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
...
                    android:src="@drawable/ic_notes"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/notes_label" />

                <com.google.android.material.textfield.TextInputLayout
...

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/notes_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/notification_icon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_notification"
                    app:layout_constraintBottom_toBottomOf="@+id/notification_header"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/notification_header" />
...

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/notification_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/repeat_icon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_repeat"
                    app:layout_constraintBottom_toBottomOf="@+id/repeat_header"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/repeat_header" />
...

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/repeat_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/repeats_every_header"
                    android:textColor="@color/subtitle_grey"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="@+id/repeat_value_label"
                    app:layout_constraintTop_toBottomOf="@+id/repeat_header"
                    app:showIfRepeatChecked="@{repeatSwitch.checked}" />
...

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/repeat_value_input"
                        android:layout_width="wrap_content"
                        android:layout_height="55dp"
...
