<resources>
    <string name="app_name" translatable="false">RemindMe</string>
    <string name="app_url" translatable="false">https://github.com/shorthouse/RemindMe</string>

    <!-- Top app bar -->
    <string name="top_bar_title_reminder_details">Details</string>
    <string name="top_app_bar_title_settings">Settings</string>
    <string name="cd_sort_reminders">Sort reminders</string>
    <string name="cd_search_reminders">Search reminders</string>
    <string name="cd_more">More</string>
    <string name="cd_back">Back</string>
    <string name="dropdown_complete_reminder">Complete</string>
    <string name="dropdown_delete_reminder">Delete</string>
    <string name="dropdown_settings">Settings</string>
    <string name="top_app_bar_search_hint">Search…</string>
    <string name="cd_clear_search">Clear Search</string>

    <!-- Reminder List -->
    <string name="reminder_overdue">Overdue</string>
    <string name="reminder_upcoming">Upcoming</string>
    <string name="reminder_completed">Completed</string>
    <string name="reminder_card_date_time">%1$s • %2$s</string>
    <string name="cd_notification_enabled_icon">Notification enabled</string>
    <string name="cd_repeat_reminder_icon">Repeat reminder</string>
    <string name="cd_has_notes_icon">Has notes</string>
    <string name="cd_complete_reminder">Complete reminder</string>
    <string name="cd_fab_add_reminder">Add reminder</string>

    <!-- Add / edit reminder -->
    <string name="hint_reminder_name">RemindMe to…</string>
    <string name="cd_date_icon">Date</string>
    <string name="cd_time_icon">Time</string>
    <string name="cd_notes_icon">Notes</string>
    <string name="hint_reminder_notes">Add notes</string>
    <string name="input_chip_notification_on">Notification on</string>
    <string name="input_chip_no_notification">No notification</string>
    <string name="input_chip_no_repeat">No repeat</string>
    <string name="button_save_reminder">Save</string>

    <plurals name="repeat_interval_days">
        <item quantity="one">%1$d day</item>
        <item quantity="other">%1$d days</item>
    </plurals>
    <plurals name="repeat_interval_weeks">
        <item quantity="one">%1$d week</item>
        <item quantity="other">%1$d weeks</item>
    </plurals>

    <!-- Settings -->
    <string name="settings_header_customisation">Customisation</string>
    <string name="settings_title_theme">App theme</string>
    <string name="settings_title_notification_behaviour">Notification behaviour</string>
    <string name="settings_subtitle_notification_on">On by default when adding reminders</string>
    <string name="settings_subtitle_notification_off">Off by default when adding reminders</string>

    <string name="settings_header_about">About</string>
    <string name="settings_title_version_number">Version number</string>
    <string name="settings_title_source_code">Source code</string>
    <string name="settings_subtitle_github">Available on GitHub</string>

    <!-- Empty States -->
    <string name="empty_state_overdue_title">No overdue reminders</string>
    <string name="empty_state_overdue_subtitle">You\'re all caught up</string>

    <string name="empty_state_upcoming_title">No upcoming reminders</string>
    <string name="empty_state_upcoming_subtitle">Add a reminder to get started</string>

    <string name="empty_state_completed_title">No completed reminders</string>
    <string name="empty_state_completed_subtitle">Completed reminders will show up here</string>

    <string name="empty_state_search_title">No reminders found</string>
    <string name="empty_state_search_subtitle">Try adjusting your search</string>

    <!-- Dialogs -->
    <string name="dialog_title_sort">Sort reminders by</string>
    <string name="date_earliest">Date - Earliest first</string>
    <string name="date_latest">Date - Latest first</string>
    <string name="alphabetical_a_to_z">Alphabetical A-Z</string>
    <string name="alphabetical_z_to_a">Alphabetical Z-A</string>

    <string name="dialog_title_repeat_interval">Repeats every</string>
    <string name="repeat_unit_option_day">Day(s)</string>
    <string name="repeat_unit_option_week">Week(s)</string>

    <string name="dialog_title_app_theme">Set app theme</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_auto">Follow system</string>

    <string name="dialog_action_ok">OK</string>
    <string name="dialog_action_cancel">Cancel</string>
    <string name="dialog_action_apply">Apply</string>

    <!-- Notifications -->
    <string name="notification_reboot_reschedule">Scheduling reminder notifications after reboot</string>
    <string name="notification_time_zone_update">Updating reminder timezones</string>
    <string name="reminder_notification_action_complete_text">Complete</string>
    <string name="notification_channel_name_reminder">Reminders</string>
    <string name="notification_channel_id_reminder">NOTIFICATION_CHANNEL_ID_REMINDER</string>

    <!-- Intent Keys -->
    <string name="intent_key_reminderId">reminderId</string>
    <string name="key_time_zone">"time-zone"</string>

    <!-- Test tags -->
    <string name="test_tag_text_field_repeat_amount">Test Tag Text Field Repeat Amount</string>
    <string name="test_tag_reminder_list_lazy_column">test_tag_reminder_list_lazy_column</string>
    <string name="error_loading_reminder_details">Error loading reminder details</string>
    <string name="completed_reminder">Reminder completed</string>
</resources>
