<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_save"
        android:icon="@drawable/ic_tick"
        android:title="@string/menu_item_Save"
        android:contentDescription="@string/cd_top_bar_save_reminder"
        app:showAsAction="always" />
</menu>

