<resources>
    <string name="app_name" translatable="false">RemindMe</string>

    <string name="hint_reminder_name">Name</string>
    <string name="hint_reminder_year">Years</string>
    <string name="hint_reminder_day">Days</string>
    <string name="hint_reminder_hour">Hours</string>
    <string name="title_reminder_interval">Reminder Interval</string>
    <string name="hint_reminder_date">Reminder start date</string>
    <string name="hint_reminder_time">Reminder start time</string>
    <string name="hint_reminder_notes">Notes</string>
    <string name="format_reminder_time">%1$s:%2$s</string>
...
